ensure very long urls do not cause wrapping issues

--- a/styles/scss/mixins.scss
+++ b/styles/scss/mixins.scss
@@ -467,3 +467,13 @@
 {
   @include Spinner;
 }
+
+@mixin Linkify
+{
+  word-break: break-all;
+}
+
+.Linkify
+{
+  @include Linkify;
+}
